Simplify default build targets to win-x64
Reduced the list of default targets in the GitHub Actions workflow from multiple Windows architecture targets (`win-arm64`, `win-x64`, `win-x86`) to solely `win-x64`. This streamlines our CI/CD pipeline by focusing on the most widely used architecture, reducing complexity, and potentially shortening build times. It also aligns with the decision to prioritize resources and support for the platform with the highest demand among our user base. Future enhancements or adjustments can be made as per user feedback or changes in platform popularity.

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       targets:
         description: Comma separated list of string targets to build
-        default: '"win-arm64","win-x64","win-x86"'
+        default: '"win-x64"'
 
 jobs:
   build:
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        target: ${{ fromJson(format('[{0}]', inputs.targets || '"win-arm64","win-x64","win-x86"')) }}
+        target: ${{ fromJson(format('[{0}]', inputs.targets || '"win-x64""')) }}
 
     steps:
       - name: Checkout code
