--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -29,8 +29,9 @@ jobs:
 
       - name: Archive and Hash
         run: |
-          zip -9 -r ./out/${{ matrix.target }}.zip ./out/${{ matrix.target }} -j
-          sha256sum ./out/${{ matrix.target }}.zip > ./out/${{ matrix.target }}.zip.sha256
+          Compress-Archive -Path ./out/${{ matrix.target }}/* -DestinationPath ./out/${{ matrix.target }}.zip -CompressionLevel Optimal -Force
+          Get-FileHash -Path ./out/${{ matrix.target }}.zip -Algorithm SHA256 | ForEach-Object { $_.Hash } | Out-File -FilePath ./out/${{ matrix.target }}.zip.sha256
+        shell: pwsh
 
       - name: Upload
         uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32 # v3
