Optimize logging for Windows deployment
Updated the project to specifically target the Windows platform by specifying `net8.0-windows` in the project file. Enhanced logging capabilities are introduced by incorporating the EventLog provider and configuring it in the `appsettings.json` to ensure more granular control over log levels, with a focus on improving the Windows service diagnostics. These adjustments pave the way for better monitoring and debugging experience when the Bitcoin Node Service runs as a Windows service. Adjustments to default log levels aim to reduce noise by elevating the threshold to `Warning`, while ensuring critical components related to Microsoft namespaces are logged at an `Information` level for comprehensive visibility.

--- a/src/node-service/appsettings.json
+++ b/src/node-service/appsettings.json
@@ -1,8 +1,15 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Error"
+      "Default": "Warning"
+    },
+    "EventLog": {
+      "SourceName": "Bitcoin Node Service",
+      "LogName": "Application",
+      "LogLevel": {
+        "Microsoft": "Information",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
     }
   },
   "BitcoinD": {
